<resources>
    <string name="app_name">K2A USB Keyboard</string>
    <string name="type">Type to USB</string>

    <string name="kp2aplugin_title">USB Keyboard</string>
    <string name="kp2aplugin_shortdesc">Send password to computer connected via USB</string>
    <string name="kp2aplugin_author">Manatsawin Hanmongkolchai</string>

    <string name="enable_plugin">Enable Keepass2Android plugin</string>
    <string name="test_plugin">TEST PLUGIN</string>
    <string name="type_user_pass">Type username/password to USB</string>
    <string name="type_user_pass_enter">Type username/password/enter to USB</string>
    <string name="hide_launcher">Hide from launcher</string>
    <string name="hide_launcher_restore">To restore, reinstall this app</string>
    <string name="error_send">Error while sending USB key. Are you rooted and using supported kernel?</string>
    <string name="no_keycode">Text contains an unsupported character. Please file a bug.</string>
    <string name="error_kernel">Your device\'s kernel is not supported. Please flash a kernel with HID support.</string>

    <string name="layout">Keyboard layout</string>
    <string name="default_layout">Default keyboard layout</string>
</resources>
